// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterableCitySelector should render 1`] = `
<FilterableCitySelector__Container>
  <Heading />
  <ScrollingSearchBox
    filterText=""
    onFilterTextChange={[Function]}
    onStickyTopChanged={[Function]}
    placeholderText="searchCity"
    spaceSearch={false}
  >
    <CitySelector
      cities={
        Array [
          CityModel {
            "_aliases": Object {
              "Allmendingen": Object {
                "latitude": 48.330714,
                "longitude": 9.72429,
              },
              "Altheim": Object {
                "latitude": 48.327677,
                "longitude": 9.770679,
              },
            },
            "_code": "city",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_latitude": undefined,
            "_live": true,
            "_longitude": undefined,
            "_name": "City",
            "_prefix": undefined,
            "_sortingName": "City",
          },
          CityModel {
            "_aliases": undefined,
            "_code": "otherCity",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_latitude": undefined,
            "_live": true,
            "_longitude": undefined,
            "_name": "Other city",
            "_prefix": undefined,
            "_sortingName": "Other City",
          },
          CityModel {
            "_aliases": undefined,
            "_code": "nonlive",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_latitude": undefined,
            "_live": false,
            "_longitude": undefined,
            "_name": "Not-live",
            "_prefix": undefined,
            "_sortingName": "Not-live",
          },
          CityModel {
            "_aliases": undefined,
            "_code": "yetanothercity",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_latitude": undefined,
            "_live": true,
            "_longitude": undefined,
            "_name": "Yet another city",
            "_prefix": undefined,
            "_sortingName": "Yet another city",
          },
        ]
      }
      filterText=""
      language="de"
      stickyTop={0}
    />
  </ScrollingSearchBox>
</FilterableCitySelector__Container>
`;

exports[`FilterableCitySelector should update filter text 1`] = `
<FilterableCitySelector__Container>
  <Heading />
  <ScrollingSearchBox
    filterText="City"
    onFilterTextChange={[Function]}
    onStickyTopChanged={[Function]}
    placeholderText="searchCity"
    spaceSearch={false}
  >
    <CitySelector
      cities={
        Array [
          CityModel {
            "_aliases": Object {
              "Allmendingen": Object {
                "latitude": 48.330714,
                "longitude": 9.72429,
              },
              "Altheim": Object {
                "latitude": 48.327677,
                "longitude": 9.770679,
              },
            },
            "_code": "city",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_latitude": undefined,
            "_live": true,
            "_longitude": undefined,
            "_name": "City",
            "_prefix": undefined,
            "_sortingName": "City",
          },
          CityModel {
            "_aliases": undefined,
            "_code": "otherCity",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_latitude": undefined,
            "_live": true,
            "_longitude": undefined,
            "_name": "Other city",
            "_prefix": undefined,
            "_sortingName": "Other City",
          },
          CityModel {
            "_aliases": undefined,
            "_code": "nonlive",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_latitude": undefined,
            "_live": false,
            "_longitude": undefined,
            "_name": "Not-live",
            "_prefix": undefined,
            "_sortingName": "Not-live",
          },
          CityModel {
            "_aliases": undefined,
            "_code": "yetanothercity",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_latitude": undefined,
            "_live": true,
            "_longitude": undefined,
            "_name": "Yet another city",
            "_prefix": undefined,
            "_sortingName": "Yet another city",
          },
        ]
      }
      filterText="City"
      language="de"
      stickyTop={0}
    />
  </ScrollingSearchBox>
</FilterableCitySelector__Container>
`;
